--- a/pom.xml
+++ b/pom.xml
@@ -24,11 +24,11 @@
       <artifactId>spring-boot-actuator</artifactId>
       <version>2.1.3.RELEASE</version>
     </dependency>
-    <!--<dependency>
-          <groupId>org.springframework.cloud</groupId>
-          <artifactId>spring-cloud-starter-consul-discovery</artifactId>
-          <version>2.1.0.RELEASE</version>
-        </dependency>-->
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-consul-discovery</artifactId>
+      <version>2.1.0.RELEASE</version>
+    </dependency>
   </dependencies>
 
 
